# remata

./: .gitignore  Cargo.toml  README.md  TODO.md  complete.md
helpers/: README.md
helpers/endian-reader/: Cargo.toml
helpers/endian-reader/src/: lib.rs
helpers/iptcdump/: Cargo.toml
helpers/iptcdump/src/: main.rs
helpers/lnk/: Cargo.toml
helpers/makerdemo/: Cargo.toml
helpers/makerdemo/src/: main.rs
helpers/makerdump/: Cargo.toml
helpers/mataaudio/: Cargo.toml
helpers/tiff/: Cargo.toml
helpers/xmpdump/: Cargo.toml
macros/: Cargo.toml
macros/exif-macros/: Cargo.toml
macros/makernote-macros/: Cargo.toml  Todo.md
macros/remata-macros/: Cargo.toml
macros/xmp-macros/: Cargo.toml
reexif/: Cargo.toml
reexif/src/: main.rs
remata-archive/: Cargo.toml  sources.md
remata-archive/examples/: zip.rs
remata-archive/src/: lib.rs
remata-audio/: Cargo.toml
remata-audio/src/: aiff.rs  ape.rs  asf.rs  atom.rs  audible.rs  dsf.rs  lib.rs  mpc.rs  re.rs  riff.rs  vob.rs  wavpack.rs
remata-audio/src/audio/: mod.rs
remata-audio/src/id3/: genre.rs  mod.rs
remata-binary/: Cargo.toml  docs.md
remata-core/: Cargo.toml
remata-core/src/: error.rs  lib.rs
remata-documents/: Cargo.toml
remata-documents/src/: lib.rs
remata-exe/: Cargo.toml
remata-exe/examples/: demo.rs
remata-exe/src/: lib.rs  system.rs
remata-exif/: Cargo.toml
remata-exif/examples/: demo.rs
remata-exif/exif/: mod.rs
remata-exif/src/: endian.rs  gps.rs  ifd.rs  lib.rs
remata-exif/src-old/: helpers.rs  lib.rs
remata-exif/src-old-2/: lib.rs  tags.txt
remata-images/: Cargo.toml
remata-images/src/: bmp.rs  lib.rs  tiff.rs
remata-iso/: Cargo.toml
remata-iso/examples/: parse.rs
remata-iso/src/: lib.rs
remata-lnk/: Cargo.toml  INFO.md  todo.md
remata-lnk/src/: guid.rs  lib.rs
remata-makernotes/: Cargo.toml
remata-makernotes/src/: lib.rs
remata-tempexif/: Cargo.toml
remata-tempexif/src/: disp.rs  endian.rs  main.rs  tags.rs
remata-video/: Cargo.toml
remata-xmp/: Cargo.toml  ExtensionSchemaAllSubsets-2025_02.xml
remata-xmp/examples/: mini.rs
remata-xmp/src/: crd.rs  lib.rs
remata-xmp/src-old/: disp.rs  exifex.rs  lib.rs  mod.rs
remata-xmp/src-old1/: main.rs
src/: lib.rs  main.rs
src/error/: mod.rs
src/readers/: aiff.rs  asf.rs  atom.rs  id3.rs  mod.rs  riff.rs  vob.rs
tools/: README.md
tools/rust/multitool/: Cargo.toml
tools/rust/multitool/src/: main.rs  simd.rs
tools/rust/multitool/src/exif/: gps.rs  helpers.rs  ifd.rs  mod.rs  starts.rs  tags.rs
xmp-codegen/: Cargo.toml  builder.rs
xmp-codegen/examples/: demo.rs
xmp-codegen/schemas/: acdsee.html
xmp-codegen/src/: codegen.rs  html_parser.rs  ir.rs  lib.rs  type_parser.rs
(+74 files in other folders)
