[workspace]
members = [
    "helpers/*",
    "remata-audio",
    "remata-xmp",
    "remata-core",
    "remata-exif",
    "remata-images",
    "remata-video",
    "remata-iso",
    "remata-exe",
    "remata-archive",
    "remata-documents",
    "remata-makernotes",
    "remata-lnk",
    # "xmp-codegen",
    "reexif",
    "macros/*"
, "remata-tempexif"]
resolver = "3"


[workspace.dependencies]
remata-macros = { path = "macros/remata-macros" }
