[workspace]
members = [
    "tools/rust/*",
    "helpers/*",
    "remata-audio",
    "remata-xmp",
    "remata-core",
    "remata-exif",
    "remata-images",
    "remata-video",
    "remata-iso",
    "remata-exe",
    "remata-archive",
    "remata-documents",
    "remata-makernotes",
    "remata-lnk",
    "macros/*", "remata-binary",
]
resolver = "3"


[workspace.dependencies]
remata-macros = { path = "macros/remata-macros" }
endian-reader = { path = "helpers/endian-reader" }
